# web_01_2024-main/Projeto_2/src/model/dto/LivroRequestDto.ts
@@ -1,0 +1,22 @@
+
+export class LivroRequestDto {
+    autor: string;
+    titulo: string;
+    categoriaID: number;
+
+    constructor(autor:string, titulo:string, categoriaID:number) {
+        this.autor = autor;
+        this.titulo = titulo
+        this.categoriaID = categoriaID
+    }
+}
+
+// export class CategoriaUpdateRequestDto {
+//     id: number;
+//     name: string;
+
+//     constructor(name:string, id:number) {
+//         this.name = name;
+//         this.id = id;
+//     }
+// }
